Add full StarUML coverage: 139 endpoints, 27 diagram types, 241 tests
- Support all 27 diagram types (UML 14, BPMN, C4, SysML 4, WF, MindMap, AWS, Azure, GCP,
Flowchart, DFD)
- Support ~170 node types, ~45 relation types, 8 shape types
- Add new endpoints: views/align, mermaid/import, diagrams/generate, elements/reorder,
link-object, export-doc
- Add UMLFoundMessage/UMLLostMessage, UMLTimeTick, UMLTimeConstraint support
- Add autoResize/stereotypeDisplay style fields
- Add BPMN EventDefinition child types, UMLInputPin/UMLOutputPin children
- Fix code review findings: SQL quoting, null checks, path validation, body size limit
- Regenerate api.html, update README.md and tests (241 test cases)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "staruml-controller",
   "title": "StarUML Controller",
-  "description": "Remote control StarUML ER diagrams via HTTP server",
-  "homepage": "https://github.com/staruml-controller",
-  "version": "1.0.0",
-  "keywords": ["erd", "http", "server", "remote", "controller"],
+  "description": "Remote control StarUML diagrams (ERD, UML, BPMN, C4, SysML, and more) via HTTP REST API",
+  "homepage": "https://github.com/pontasan/staruml-controller",
+  "version": "1.1.0",
+  "keywords": ["erd", "uml", "bpmn", "c4", "sysml", "http", "server", "remote", "controller", "rest-api", "automation"],
   "author": {
     "name": "StarUML Controller"
   },
